# clipstash

./: Cargo.toml  LICENSE  README.md
src/: clipboard.rs  hotkey.rs  main.rs  menu.rs  popover.rs  store.rs
