[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"
description = "A featherweight macOS menu bar clipboard manager"
authors = ["AJ <aashish.jha@marbles.health>"]

[dependencies]
# Native macOS AppKit bindings — no Electron, no web view.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSData",
    "NSGeometry",
    "NSObject",
    "NSString",
    "NSThread",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSButton",
    "NSCell",
    "NSColor",
    "NSControl",
    "NSEvent",
    "NSFont",
    "NSPanel",
    "NSPasteboard",
    "NSResponder",
    "NSScrollView",
    "NSSearchField",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSTableColumn",
    "NSTableView",
    "NSText",
    "NSTextField",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
] }
block2 = "0.6"

# We build the status item + popover directly via objc2 so we can match
# ClipVault's custom panel UI (search box, filter dropdown, image thumbnails,
# per-row trash icons) — a native NSMenu can't render any of that.
# (tray-icon/muda dropped on purpose.)

# Embedded pure-Rust DB — faster than SQLite for k/v workloads, no C deps
redb = "2.2"

# Global hotkey (⌘⇧V)
global-hotkey = "0.6"

# Event loop for tray + hotkey callbacks
tao = "0.30"

# Serialization for records stored in redb
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Image decoding/thumbnailing
image = { version = "0.25", default-features = false, features = ["png"] }

# Time + IDs
time = { version = "0.3", features = ["serde", "formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging (cheap)
log = "0.4"
env_logger = "0.11"

[profile.release]
# Ship a tiny, fast binary
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
